<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Program3</string>
    <string name="settings_text">DFA Settings</string>
    <string name="states_text">States</string>
    <string name="test_input_text">Test Inputs</string>
    <string name="reset_switch_text">Reset DFA</string>
    <string name="alphabet_label">Alphabet</string>
    <string name="num_states_label"># of States</string>
    <string name="accept_null_label">Accept Null</string>
    <string name="tog_null_on">True</string>
    <string name="tog_null_off">False</string>
    <string name="reset_on_text">Reset</string>
    <string name="reset_off_text">>>>></string>
    <string name="output_hint">DFA test results</string>
    <string name="input_hint">DFA input strings here</string>
    <string name="run_test_text">Run Test</string>
    <string name="btn_mng_start_text">Change Start State</string>
    <string name="btn_mng_end_text">Manage End States</string>
    <string name="btn_mng_trans_text">Manage Transitions</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="select_start_state">Select a start state</string>
    <string name="select_end_state">Select end states</string>
    <string name="mod_trans_label">Set Transition Result</string>
    <string name="title_activity_manage_state">ManageStateActivity</string>
    <string name="title_activity_test_input">TestInputActivity</string>
    <string name="title_activity_manage_starts">ManageStartsActivity</string>
    <string name="title_activity_manage_ends">ManageEndsActivity</string>
    <string name="title_activity_manage_trans">ManageTransActivity</string>

</resources>
