<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    android:orientation="vertical">

    <Button 
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/label_text"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding"
        android:background="@color/button_bg"
        android:text="@string/settings_text"/>
    <Button 
        android:id="@+id/btn_states"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_settings"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/label_text"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding"
        android:background="@color/button_bg"
        android:text="@string/states_text"/>
    <Button 
        android:id="@+id/btn_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_states"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/label_text"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding"
        android:background="@color/button_bg"
        android:text="@string/test_input_text"/>
    
    <TextView 
        android:id="@+id/reset_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/label_text"
        android:background="@color/item_bg"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding"
        android:text="@string/reset_switch_text"/>
    <Switch 
        android:id="@+id/swch_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/reset_label"
        android:layout_alignBaseline="@id/reset_label"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/label_text"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding"
    	android:checked="false"
		android:textOn="@string/reset_on_text"
		android:textOff="@string/reset_off_text" />"

</RelativeLayout>
