<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/alpha_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/label_text"
        android:background="@color/item_bg"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding"
        android:text="@string/alphabet_label" />
    <AutoCompleteTextView 
        android:id="@+id/alphabet_text" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/alpha_label"
        android:layout_alignBaseline="@id/alpha_label"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/input_text"
        android:background="@color/item_bg"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding"
    	android:maxLines="1"
    	android:inputType="text"
        android:completionThreshold="1" />
    
    <TextView
        android:id="@+id/state_num_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alpha_label"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/label_text"
        android:background="@color/item_bg"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding"
        android:text="@string/num_states_label" />
    <EditText
        android:id="@+id/number_states" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/state_num_label"
        android:layout_toRightOf="@id/state_num_label"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/input_text"
        android:background="@color/item_bg"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding"
        android:inputType="number" />
    
    <TextView
        android:id="@+id/null_tog_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/state_num_label"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/label_text"
        android:background="@color/item_bg"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding"
        android:text="@string/accept_null_label" />
    <ToggleButton
        android:id="@+id/toggle_null" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/null_tog_label"
        android:layout_toRightOf="@id/null_tog_label"
        android:textOn="@string/tog_null_on"
        android:textOff="@string/tog_null_off"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/input_text"
    	android:layout_margin="@dimen/item_margin"
    	android:padding="@dimen/item_padding" />"

</RelativeLayout>
