<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/test_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/item_bg"
        android:hint="@string/output_hint"
        android:padding="@dimen/item_padding"
        android:layout_margin="@dimen/item_margin"
        android:textColor="@color/label_text"
        android:textSize="@dimen/text_medium" />

    <EditText
        android:id="@+id/test_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/item_bg"
        android:hint="@string/input_hint"
        android:layout_margin="@dimen/item_margin"
        android:padding="@dimen/item_padding"
        android:textColor="@color/label_text"
        android:textSize="@dimen/text_medium"
        android:inputType="textMultiLine" />

    <ImageButton
        android:id="@+id/btn_run_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/label_text"
    	android:layout_margin="@dimen/item_margin"
        android:background="@color/button_bg"
        android:src="@drawable/run_test_img"
        android:contentDescription="@string/run_test_text"/>

</LinearLayout>
